--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -3,7 +3,6 @@
 .modal {
 	padding: 0;
 	border-radius: var(--border-radius);
-	overflow: hidden;
 	border: 0;
 
 	&::backdrop {
@@ -11,7 +10,7 @@
 		opacity: 0.8;
 	}
 
-	&__scroll-wrap {
+	&__content-wrapper {
 		height: 100%;
 		overflow-y: auto;
 	}
@@ -20,6 +19,19 @@
 		position: relative;
 		padding: calculate-from-font-size(2.5);
 
+		&-close-button {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			cursor: pointer;
+			padding: 0;
+			border: none;
+			background-color: transparent;
+			width: calculate-from-font-size(1.875);
+			height: calculate-from-font-size(1.875);
+		}
+
+		//? ??????
 		p {
 			margin: 0;
 		}
@@ -30,90 +42,71 @@
 		gap: calculate-from-font-size(0.9375);
 		margin-top: calculate-from-font-size(0.9375);
 	}
+}
 
-	&__list {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: calculate-from-font-size(0.9375);
+.content-list {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: calculate-from-font-size(0.9375);
 
-		@include mobile {
-			display: flex;
-			flex-direction: column;
+	@include mobile {
+		grid-template-columns: 1fr;
+	}
+
+	&-item {
+		align-items: center;
+		justify-content: space-between;
+		column-gap: calculate-from-font-size(1.25);
+		row-gap: calculate-from-font-size(0.625);
+		padding: calculate-from-font-size(0.625);
+		border: set-border(2px, var(--color-gray-dark));
+		border-radius: var(--border-radius-small);
+		box-shadow: set-box-shadow(var(--color-gray-dark));
+		transition: set-hover-transition(border);
+
+		&--grid {
+			display: grid;
+			grid-template-columns: auto max-content;
+
+			@include mobile-s {
+				grid-template-columns: auto;
+				justify-content: center;
+				justify-items: center;
+			}
 		}
 
-		&-item {
-			align-items: center;
-			justify-content: space-between;
-			column-gap: calculate-from-font-size(1.25);
-			row-gap: calculate-from-font-size(0.625);
-			padding: calculate-from-font-size(0.625);
-			border: set-border(2px, var(--color-gray-dark));
-			border-radius: var(--border-radius-small);
-			box-shadow: set-box-shadow(var(--color-gray-dark));
-			transition: set-hover-transition(border);
+		&-text {
+			div {
+				margin-top: calculate-from-font-size(0.3125);
 
-			&--grid {
-				display: grid;
-				grid-template-rows: auto auto;
-				grid-template-columns: auto max-content;
-
-				@include mobile-s {
-					grid-template-rows: auto auto auto;
-					grid-template-columns: auto;
-					justify-content: center;
-					justify-items: center;
+				span:last-child {
+					white-space: nowrap;
 				}
 			}
 
-			&-add-btn {
-				row-gap: 0;
-				padding: 0;
-				border: none;
-
-				@include mobile-s {
-					grid-template-rows: 1fr;
-					grid-template-columns: 1fr;
-				}
+			.has-margin-top-0 {
+				margin-top: 0;
 			}
 
-			img {
-				width: calculate-from-font-size(6.25);
-				height: calculate-from-font-size(6.25);
-			}
-		}
-	}
-
-	&__text {
-		div {
-			margin-top: calculate-from-font-size(0.3125);
-
-			span:last-child {
-				white-space: nowrap;
+			@include mobile-s {
+				text-align: center;
 			}
 		}
 
-		.--mt-0 {
-			margin-top: 0;
+		&-add-btn {
+			row-gap: 0;
+			padding: 0;
+			border: none;
+
+			@include mobile-s {
+				grid-template-rows: 1fr;
+				grid-template-columns: 1fr;
+			}
 		}
 
-		@include mobile-s {
-			text-align: center;
-		}
-	}
-
-	&__close-button {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		cursor: pointer;
-		padding: 0;
-		border: none;
-		background-color: transparent;
-		width: calculate-from-font-size(1.875);
-		height: calculate-from-font-size(1.875);
-		svg {
-			width: 100%;
-			height: 100%;
+		img {
+			width: calculate-from-font-size(6.25);
+			height: calculate-from-font-size(6.25);
 		}
 	}
 }
