--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -5,6 +5,10 @@
 	border-radius: var(--border-radius);
 	border: 0;
 
+	@include mobile-s {
+		width: 100%;
+	}
+
 	&::backdrop {
 		background-color: var(--color-gray-dark);
 		opacity: 0.8;
@@ -19,6 +23,16 @@
 		position: relative;
 		padding: calculate-from-font-size(2.5);
 
+		&-confirm-buttons {
+			display: flex;
+			gap: calculate-from-font-size(0.9375);
+			margin-top: calculate-from-font-size(0.625);
+		}
+
+		&-confirm-button {
+			width: 100%;
+		}
+
 		&-close-button {
 			position: absolute;
 			top: 10px;
@@ -31,7 +45,6 @@
 			height: calculate-from-font-size(1.875);
 		}
 
-		//? ??????
 		p {
 			margin: 0;
 		}
@@ -70,6 +83,7 @@
 
 			@include mobile-s {
 				grid-template-columns: auto;
+				//grid-template-columns: inherit;
 				justify-content: center;
 				justify-items: center;
 			}
@@ -90,6 +104,15 @@
 
 			@include mobile-s {
 				text-align: center;
+			}
+		}
+
+		&-delete-button {
+			grid-column: span 2;
+
+			@include mobile-s {
+				grid-column: auto;
+				width: 100%;
 			}
 		}
 
