fix: add master modal
Fixed CSS styles.

Replaced the incorrect field with the cost of the service with the
field with the master's work experience.

--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -190,17 +190,16 @@
 	<div class="notif" data-notif="add-service"></div>
 </dialog>
 
-<dialog class="modal" data-modal="add-master">
-	<div class="modal__scroll-wrap">
-		<form class="modal__content form" novalidate>
+<dialog class="app__modal modal" data-modal="add-master">
+	<div class="modal__content-wrapper">
+		<form class="modal__content modal__content-form content-form" novalidate>
 			<h2 class="visually-hidden">Добавление мастера</h2>
-			<p>
+			<p class="content-form__field-name">
 				<label for="name-master" class="visually-hidden">
 					Введите имя мастера
 				</label>
 				<input
 					type="text"
-					class="form__input"
 					name="name"
 					id="name-master"
 					placeholder="Имя"
@@ -208,16 +207,15 @@
 					pattern="^[а-яА-ЯёЁ]+$"
 					title="Имя должно состоять только из кириллицы (русский алфавит)."
 				/>
-				<span class="form__input-error"></span>
+				<span class="content-form__field-error"></span>
 			</p>
 
-			<p>
+			<p class="content-form__field-surname">
 				<label for="surname-master" class="visually-hidden">
 					Введите фамилию мастера
 				</label>
 				<input
 					type="text"
-					class="form__input"
 					name="surname"
 					id="surname-master"
 					placeholder="Фамилия"
@@ -225,32 +223,28 @@
 					pattern="^[а-яА-ЯёЁ]+$"
 					title="Фамилия должна состоять только из кириллицы (русский алфавит)."
 				/>
-				<span class="form__input-error"></span>
+				<span class="content-form__field-error"></span>
 			</p>
 
-			<div class="form__inputs-wrap">
-				<p>
-					<label for="price-service" class="visually-hidden">
-						Введите стоимость услуги
+			<div class="content-form__fields-wrapper">
+				<p class="content-form__field-experience">
+					<label for="experience-master" class="visually-hidden">
+						Введите стаж работы мастера
 					</label>
 					<input
 						type="text"
-						class="form__input form__input--short"
-						name="price-service"
-						id="price-service"
-						placeholder="Стоимость"
+						name="experience"
+						id="experience-master"
+						placeholder="Стаж работы"
 						required
-						pattern="\d*"
-						title="Стоимость услуги должна состоять только из цифр."
 					/>
-					₽
-					<span class="form__input-error"></span>
+					<span class="content-form__field-error"></span>
 				</p>
 
-				<div class="form__select">
-					<div class="form__select-btn">
+				<div class="content-form__field-dropdown">
+					<div class="content-form__field-dropdown-button">
 						<img alt="" />
-						<div class="form__select-dropdown">
+						<div class="content-form__field-dropdown-button-icons">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								width="24"
@@ -276,50 +270,50 @@
 						</div>
 					</div>
 
-					<ul class="form__select-list">
-						<li class="form__select-list-item">
+					<ul class="content-form__field-dropdown-list">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/beard.png"
 								alt=""
 								data-image="beardIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/boy.png"
 								alt=""
 								data-image="boyIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/camouflage.png"
 								alt=""
 								data-image="camoIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/complex.png"
 								alt=""
 								data-image="complexIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/haircut.png"
 								alt=""
 								data-image="haircutIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/man.png"
 								alt=""
 								data-image="manIcon"
 							/>
 						</li>
-						<li class="form__select-list-item">
+						<li class="content-form__field-dropdown-list-item">
 							<img
 								src="./../../images/app/woman.png"
 								alt=""
@@ -331,14 +325,18 @@
 			</div>
 
 			<button
-				class="actions__btn actions__btn--black-text form__button"
+				class="content-form__button button button--black-text"
 				type="submit"
 				data-action="create-master"
 			>
 				Добавить
 			</button>
 
-			<button class="modal__close-btn" type="button" data-action="close">
+			<button
+				class="modal__content-close-button"
+				type="button"
+				data-button-action="close"
+			>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="50"
