--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -2,8 +2,8 @@
 
 .modal {
 	padding: 0;
-	border-radius: var(--border-radius);
 	border: 0;
+	border-radius: var(--border-radius);
 
 	@include mobile-s {
 		width: 100%;
@@ -37,12 +37,12 @@
 			position: absolute;
 			top: 10px;
 			right: 10px;
-			cursor: pointer;
-			padding: 0;
-			border: none;
-			background-color: transparent;
 			width: calculate-from-font-size(1.875);
 			height: calculate-from-font-size(1.875);
+			padding: 0;
+			background-color: transparent;
+			border: none;
+			cursor: pointer;
 		}
 
 		p {
@@ -61,8 +61,8 @@
 	}
 
 	&-item {
-		align-items: center;
 		justify-content: space-between;
+		align-items: center;
 		column-gap: calculate-from-font-size(1.25);
 		row-gap: calculate-from-font-size(0.625);
 		padding: calculate-from-font-size(0.625);
@@ -128,121 +128,116 @@
 	}
 }
 
-.form {
-	&__input {
-		border-radius: var(--border-radius-small);
-		border: set-border(2px, var(--color-gray-dark));
-		padding: 0 calculate-from-font-size(0.625);
-		height: calculate-from-font-size(2.5);
-		width: 100%;
-		background-color: transparent;
-		color: var(--color-black);
-		transition: set-hover-transition(border-color);
-		&::placeholder {
-			color: var(--color-black);
-		}
-		&:focus,
-		&:active {
-			outline: none;
-			border-color: var(--color-accent);
-		}
-		&:autofill,
-		&:autofill:hover,
-		&:autofill:focus,
-		&:autofill:active,
-		&:-webkit-autofill,
-		&:-webkit-autofill:hover,
-		&:-webkit-autofill:focus,
-		&:-webkit-autofill:active {
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: var(--color-black);
-		}
-
-		&--short {
-			width: 90%;
-		}
-
-		&--is-invalid {
-			border: set-border(2px, var(--color-red-notif)) !important;
+.content-form {
+	&__field {
+		&-name,
+		&-surname,
+		&-experience {
+			input {
+				width: 100%;
+				height: calculate-from-font-size(2.5);
+				padding: 0 calculate-from-font-size(0.625);
+				border: set-border(2px, var(--color-gray-dark));
+				border-radius: var(--border-radius-small);
+				transition: set-hover-transition(border-color);
+				&::placeholder {
+					color: var(--color-black);
+				}
+				&:focus,
+				&:active {
+					border-color: var(--color-accent);
+					outline: none;
+				}
+				&:autofill,
+				&:autofill:hover,
+				&:autofill:focus,
+				&:autofill:active,
+				&:-webkit-autofill,
+				&:-webkit-autofill:hover,
+				&:-webkit-autofill:focus,
+				&:-webkit-autofill:active {
+					-webkit-background-clip: text;
+					-webkit-text-fill-color: var(--color-black);
+				}
+			}
 		}
 
 		&-error {
-			margin-top: calculate-from-font-size(0.3125);
 			display: block;
 			width: 100%;
 			height: 100%;
-			position: static;
+			margin-top: calculate-from-font-size(0.3125);
 			transform: none;
-		}
-	}
-
-	p {
-		width: calculate-from-font-size(18.75);
-	}
-
-	&__inputs-wrap {
-		display: flex;
-		margin-top: calculate-from-font-size(0.625);
-		width: calculate-from-font-size(18.75);
-		align-items: center;
-		gap: calculate-from-font-size(1.5625);
-
-		p {
-			width: 66%;
-		}
-	}
-
-	&__select {
-		&-btn {
-			display: flex;
-			align-items: center;
-			cursor: pointer;
-			border-radius: var(--border-radius-small);
-			border: set-border(2px, var(--color-gray-dark));
-			padding: calculate-from-font-size(0.3125);
-			img {
-				width: 60px;
-				height: 60px;
-			}
 		}
 
 		&-dropdown {
-			position: relative;
-			width: 24px;
-			height: 50px;
-			svg:first-child {
-				position: absolute;
-				top: -10%;
-				right: 50%;
-				transform: translate(50%, 50%);
-			}
-			svg:last-child {
-				position: absolute;
-				top: 10%;
-				right: 50%;
-				transform: translate(50%, 50%);
-			}
-		}
-
-		&-list {
-			display: none;
-			position: absolute;
-			flex-direction: column;
-			background-color: var(--color-white);
-			border: set-border(2px, var(--color-gray-dark));
-			border-radius: var(--border-radius-small);
-
-			&-item {
-				padding-block: calculate-from-font-size(0.3125);
-			}
-
-			&--is-open {
+			&-button {
 				display: flex;
+				align-items: center;
+				width: 110px;
+				padding: calculate-from-font-size(0.3125);
+				border: set-border(2px, var(--color-gray-dark));
+				border-radius: var(--border-radius-small);
+				cursor: pointer;
+				img {
+					width: 80px;
+					height: 80px;
+				}
+
+				&-icons {
+					position: relative;
+					width: 24px;
+					height: 50px;
+					svg {
+						position: absolute;
+						width: 24px;
+						height: 24px;
+						transform: translate(50%, 50%);
+						&:first-child {
+							top: -10%;
+							right: 50%;
+						}
+						&:last-child {
+							top: 10%;
+							right: 50%;
+						}
+					}
+				}
+			}
+
+			&-list {
+				position: absolute;
+				display: none;
+				flex-direction: column;
+				background-color: var(--color-white);
+				border: set-border(2px, var(--color-gray-dark));
+				border-radius: var(--border-radius-small);
+
+				&-item {
+					padding-block: calculate-from-font-size(0.3125);
+				}
+
+				&--is-open {
+					display: flex;
+				}
 			}
 		}
 	}
 
-	&__button {
+	&__fields-wrapper {
+		display: flex;
+		align-items: center;
+		gap: calculate-from-font-size(1.5625);
+		width: calculate-from-font-size(18.5);
 		margin-top: calculate-from-font-size(0.625);
+	}
+
+	&__button {
+		width: 100%;
+		margin-top: calculate-from-font-size(0.625);
+	}
+
+	&__field-control--is-invalid {
+		border: set-border(2px, var(--color-red)) !important;
 	}
 }
