refactor: decomposition of JS code
Added validation of modals for adding a service/master.

The functionality for resetting the state of the modal for adding a
service/master has been updated.

--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -54,10 +54,10 @@
 					id="name-service"
 					placeholder="Название"
 					required
-					pattern="^[а-яА-ЯёЁ]+$"
+					pattern="^[а-яА-ЯёЁ ]+$"
 					title="Название услуги должно состоять только из кириллицы (русский алфавит)."
 				/>
-				<span class="content-form__field-error"></span>
+				<span class="content-form__field-error form__field-error"></span>
 			</p>
 
 			<div class="content-form__fields-wrapper">
@@ -75,7 +75,7 @@
 						title="Стоимость услуги должна быть без пробелов и состоять только из цифр."
 					/>
 					₽
-					<span class="content-form__field-error"></span>
+					<span class="content-form__field-error form__field-error"></span>
 				</p>
 
 				<div class="content-form__field-dropdown">
@@ -208,7 +208,7 @@
 					pattern="^[а-яА-ЯёЁ]+$"
 					title="Имя мастера должно состоять только из кириллицы (русский алфавит)."
 				/>
-				<span class="content-form__field-error"></span>
+				<span class="content-form__field-error form__field-error"></span>
 			</p>
 
 			<p class="content-form__field-surname">
@@ -224,7 +224,7 @@
 					pattern="^[а-яА-ЯёЁ]+$"
 					title="Фамилия мастера должна состоять только из кириллицы (русский алфавит)."
 				/>
-				<span class="content-form__field-error"></span>
+				<span class="content-form__field-error form__field-error"></span>
 			</p>
 
 			<div class="content-form__fields-wrapper">
@@ -239,7 +239,7 @@
 						placeholder="Стаж работы"
 						required
 					/>
-					<span class="content-form__field-error"></span>
+					<span class="content-form__field-error form__field-error"></span>
 				</p>
 
 				<div class="content-form__field-dropdown">
