--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -163,6 +163,10 @@
 			}
 		}
 
+		&-surname {
+			margin-top: calculate-from-font-size(0.625) !important;
+		}
+
 		&-price {
 			input {
 				width: 91%;
@@ -171,10 +175,8 @@
 
 		&-error {
 			display: block;
-			width: 100%;
-			height: 100%;
+			max-width: calculate-from-font-size(18.5);
 			margin-top: calculate-from-font-size(0.3125);
-			transform: none;
 		}
 
 		&-dropdown {
@@ -243,8 +245,8 @@
 		width: 100%;
 		margin-top: calculate-from-font-size(0.625);
 	}
+}
 
-	&__field-control--is-invalid {
-		border: set-border(2px, var(--color-red)) !important;
-	}
+.form__field-control--is-invalid {
+	border: set-border(2px, var(--color-red)) !important;
 }
