refactor: decomposition of JS code
Refactoring and decomposition of old code completed.

Submitting a valid add master modal form creates a record in
local/session storage. If the master has already been added, a
notification is displayed.

--- a/src/css/auth/_auth-notification.scss
+++ b/src/css/auth/_auth-notification.scss
@@ -27,7 +27,7 @@
 	}
 }
 
-/* [data-notif="add-service"],
-[data-notif="add-master"] {
+.notification[data-notification="add-service"],
+.notification[data-notification="add-master"] {
 	box-shadow: set-box-shadow(var(--color-black));
-} */
+}
