feat: add a schedule table
Added HTML markup for the schedule table.

The next 7 days are inserted into the table header.

--- a/src/app/html/app-main.html
+++ b/src/app/html/app-main.html
@@ -49,5 +49,190 @@
 		</ul>
 	</div>
 
-	<div class="app__main-schedule">Расписание</div>
+	<div class="app__main-schedule schedule">
+		<table class="schedule-table">
+			<caption>
+				Расписание записей
+			</caption>
+
+			<thead>
+				<tr>
+					<td></td>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+					<th>
+						<span class="schedule-table__month-day-header"></span>
+						<span class="schedule-table__week-day-header"></span>
+					</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<th>09:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>10:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>11:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>12:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>13:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>14:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>15:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>16:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>17:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>18:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>19:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>20:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+
+				<tr>
+					<th>21:00</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </main>
